# tylang

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/bir/: Cargo.toml
crates/bir/src/: build.rs  id.rs  lib.rs  print.rs  translate.rs  types.rs  visit.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  types.rs
crates/cst/: Cargo.toml
crates/cst/src/: green.rs  hash.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  utils.rs
crates/cst/src/green/: kinds.rs
crates/cst/src/parser/: grammar.rs  input.rs  output.rs  parser.rs
crates/cst/src/parser/grammar/: expressions.rs  items.rs
crates/cst/src/syntax/: builder.rs  node.rs  token.rs  traverse.rs
crates/lir/: Cargo.toml
crates/lir/src/: builder.rs  lib.rs  pass.rs  passes.rs  printers.rs  translate.rs  types.rs  utils.rs
crates/lir/src/types/: block.rs  function.rs  module.rs  ty.rs  values.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  input.rs  lib.rs  output.rs  types.rs
crates/parser/src/grammar/: expressions.rs  items.rs
crates/sema/: Cargo.toml
crates/sema/src/: check.rs  errors.rs  lib.rs  types.rs
crates/testc/: Cargo.toml
crates/testc/src/: main.rs
crates/tyc/: Cargo.toml
crates/tyc/src/: codegen.rs  compiler.rs  main.rs  pika.rs  subtypes.md  type_check.rs  typeck.rs
crates/tyls/: Cargo.toml
crates/tyls/src/: main.rs  semantic_tokens.rs
crates/typeck/: Cargo.toml
crates/typeck/src/: translate.rs  types.rs
crates/utils/: Cargo.toml
crates/utils/src/: anchor.rs  ap.rs  folding_set.rs  intern_map.rs  lib.rs  source_utils.rs  span.rs  sparse_matrix.rs  string_utils.rs  vec_graph.rs
examples/: cast.ty  diff_size_int.ty  error.ty  example.ty  exprs.ty  fib.ty  fibonacci.ll  fibonacci.ty  literals.ty  loop.ll  loop.ty  loops.ll  loops.ty  print_arg.ll  print_arg.ty  test.ty  types.ty
src/: ast.rs  compiler.rs  interpret.rs  lexer.rs  llvm_interpret.rs  main.rs  parser.rs  util.rs
src/ast/: constant.rs  error.rs  expression.rs  function.rs  item.rs  parser.rs  scope.rs  statement.rs  tree.rs  type.rs  variable.rs  visit.rs
src/parser/: constant.rs  error.rs  expression.rs  function.rs  statement.rs  type.rs  variable.rs  visit.rs
src/util/: intern_map.rs
tests/: fibonacci.stdout  fibonacci.ty  if.ty  shadowing.stdout  shadowing.ty  while.stdout  while.ty
xtask/src/: main.rs
