[package]
name = "tylang"
version = "0.1.0"
authors = ["Tyler Lanphear <animemachine13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
clap = "2.33.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }
log = "0.4.8"
env_logger = "0.7.1"
bimap = "0.4.0"

[dev-dependencies]
pretty_assertions= "0.6.1"
