[workspace]
members = [
    "crates/ast",
    "crates/bir",
    "crates/codegen",
    "crates/cst",
    "crates/lir",
    "crates/sema",
    "crates/testc",
    "crates/tyc",
    "crates/tyls",
    "crates/utils",
    "crates/parser",
    "crates/lir3/",
    "xtask",
]

[profile.release]
debug = true
