[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lir = { path = "../lir/" }
lir3 = { path = "../lir3/" }
sema = { path = "../sema/" }
utils = { path = "../utils/" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
log = "0.4.8"
env_logger = "0.7.1"
