[package]
name = "lir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bir = { path = "../bir/" }
sema = { path = "../sema/" }
utils = { path = "../utils" }
assert_matches = "1.5.0"
smallvec = "1.10"
