[package]
name = "tyc"
version = "0.1.0"
authors = ["Tyler Lanphear <animemachine13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils/" }
ast = { path = "../ast/" }
codegen = { path = "../codegen/" }
cst = { path = "../cst/" }
parser = { path = "../parser/" }
bir = { path = "../bir/" }
lir = { path = "../lir/" }
sema = { path = "../sema/" }
itertools = "0.9.0"
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
