[package]
name = "tyls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast/" }
cst = { path = "../cst/" }
parser = { path = "../parser/" }
utils = { path = "../utils/" }
lsp-server = "0.5.2"
lsp-types = "0.92.1"
serde = "1.0"
serde_json = "1.0"
log = "0.4.8"
simple-logging = "2.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
crossbeam-queue = "0.3.5"
crossbeam-utils = "0.8.8"
parking_lot = "0.12.0"
once_cell = "1.12.0"
